# python-hash

./: json-redactor.py  out.json  people.json  pyproject.toml
json_redactor/: __main__.py  core.py
json_redactor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
